--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,5 @@
-<header>TopPage</header>
-<h1>練習問題</h1>
+<header>toppage</header>
 
 <button>
-  <%= link_to 'button', '#' %>
+  <%= link_to 'ボタン', '#' %>
 </button>
